--- a/8_16_testing_save_to_github.ipynb
+++ b/8_16_testing_save_to_github.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPPnMEd/W2S6cBGkdHvdB2e",
+      "authorship_tag": "ABX9TyPF+9nCtKPIhLNJUKYxwfvm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "pb7uTRXbOtq1"
+        "id": "pb7uTRXbOtq1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3b7c8b96-665b-4c32-d9bb-214c21c701c1"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello world\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(\"hello world\")"
+      ]
     }
   ]
 }
